--- a/src/scss/04_elements/_typography.scss
+++ b/src/scss/04_elements/_typography.scss
@@ -1,3 +1,5 @@
+// Notice: If you need to do changes to this file make sure that also the ckeditor.scss styles are updated accordingly.
+
 h1,
 h2,
 h3,
