UHF-8387: Add comments for ckeditor styles and minimize amount of style declarations on ckeditor.scss file so that the possiblity of conflicting styles is minimal in the future

--- a/src/scss/04_elements/_table.scss
+++ b/src/scss/04_elements/_table.scss
@@ -1,3 +1,5 @@
+// Notice: If you need to do changes to this file make sure that also the ckeditor.scss styles are updated accordingly.
+
 table {
   background-color: $color-white;
   border: 1px solid $color-black-60;
