--- a/src/scss/05_objects/_quote.scss
+++ b/src/scss/05_objects/_quote.scss
@@ -1,3 +1,5 @@
+// Notice: If you need to do changes to this file make sure that also the ckeditor.scss styles are updated accordingly.
+
 .quote {
   @include font('special.quote');
   display: block;
