--- a/src/scss/06_components/paragraphs/_text.scss
+++ b/src/scss/06_components/paragraphs/_text.scss
@@ -1,3 +1,5 @@
+// Notice: If you need to do changes to this file make sure that also the ckeditor.scss styles are updated accordingly.
+
 .component--paragraph-text .component__content {
   @include font('body');
   max-width: $content-width-max;
