--- a/src/scss/06_components/paragraphs/_unit-search.scss
+++ b/src/scss/06_components/paragraphs/_unit-search.scss
@@ -2,6 +2,11 @@
   background-color: $color-silver-light;
 }
 
+// Patch Siteimprove false positive color contrast issue to reduce noise
+.component--unit-search .hds-checkbox__label{
+  background-color: $color-silver-light;
+}
+
 // If the unit-search is just before footer.
 .layout-main-wrapper > *:last-child .component--unit-search:last-child {
   margin-bottom: -115px; // Enough to get the block under the footer.
