--- a/src/scss/06_components/paragraphs/_map.scss
+++ b/src/scss/06_components/paragraphs/_map.scss
@@ -7,6 +7,11 @@ $-map-aspect-ratio-mobile: 1;
   background-color: $color-silver-light;
 }
 
+// Patch Siteimprove false positive color contrast issue to reduce noise
+.component--map .map__external-link {
+  background-color: $color-silver-light;
+}
+
 .unit .component--map {
   margin-top: $spacing-double;
 
