UHF-8676: Adjust react search component styles so that it works also in components-upper region, add components-upper region class for tpr-service template

--- a/src/scss/06_components/pages/_basic-page.scss
+++ b/src/scss/06_components/pages/_basic-page.scss
@@ -89,7 +89,7 @@
   .page-divider,
   .main-image,
   .long-desc,
-  .enriched-content {
+  .enriched-content:not(.components) {
     @include components-container-max-width;
     @include component-side-padding;
     margin-left: auto;
