--- a/templates/module/helfi_tpr/tpr-service.html.twig
+++ b/templates/module/helfi_tpr/tpr-service.html.twig
@@ -28,7 +28,7 @@
     {% endif %}
 
     {% if content.field_content|render|striptags|trim is not empty %}
-      <div class="enriched-content components components--service">
+      <div class="enriched-content components components--upper components--service">
         {{ content.field_content }}
       </div>
     {% endif %}
