--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -11,12 +11,8 @@
 
 .ck-content {
   @import '03_generic/_index';
-  @import '04_elements/_index';
 
-  // Import only the styles that are needed for the ckeditor content creation and not the whole __index.scss
-  @import '05_objects/_quote';
-
-  // Text paragraph styles as written in 04_generic/_base.scss and '06_components/paragraphs/text'.
+  // Text paragraph styles as written in 03_generic/_base.scss and '06_components/paragraphs/text'.
   @include font('body');
   color: $color-black-90;
   font-family: $base-font-family;
@@ -24,6 +20,11 @@
   > div {
     max-width: $content-width-max;
   }
+
+  @import '04_elements/_index';
+
+  // Import only the styles that are needed for the ckeditor content creation and not the whole __index.scss
+  @import '05_objects/_quote';
 }
 
 // Additional styling for links.
@@ -73,7 +74,7 @@
 // 04_elements/_table.scss
 // The CKEditor table element dom is quite different from what the end result will be once the node is saved
 // so the styles needed quite a bit adjusting. When the table styles are updated remember to update these as well.
-// Specificity required because of overlapping styles from CKEditor and HDBT-admin theme.
+// Specificity required because of overlapping styles from CKEditor and hdbt_admin theme.
 .ck-editor .ck-content figure.table {
   margin: $spacing-double 0;
   outline: 1px solid $color-black-60;
