PLATTA-4940 - helfi link is no longer used for all links, but only for some - ex: external and buttons

--- a/templates/module/helfi_api_base/helfi-link.html.twig
+++ b/templates/module/helfi_api_base/helfi-link.html.twig
@@ -1,3 +1,7 @@
+{#
+  This twig is called only for certain links
+  see conditions in \Drupal\helfi_api_base\Link\LinkProcessor::preRenderLink
+#}
 {% spaceless %}
 
   {% if 'data-selected-icon' in url.options.attributes|keys %}
