UHF-3810: Convert TODO into a regular comment since it can't be turned into a Jira issue as it has a dependency to helsinkikanava and we have no idea when it might change of if it will ever change

--- a/templates/media/media-oembed-iframe--icareus-suite.html.twig
+++ b/templates/media/media-oembed-iframe--icareus-suite.html.twig
@@ -11,7 +11,7 @@
   <head>
     <css-placeholder token="{{ placeholder_token }}">
   </head>
-  {# TODO: Fix "right: -15px" once embedded video is returned without scrollbars. #}
+  {# The "right: -15px" is added to the video because it is returned with scrollbars. Once they are removed this can also be removed. #}
   <body style="margin: 0; height: 100%; left: 0; right: -15px; position: absolute; top: 0; width: auto; overflow: hidden;">
     {{ media|raw }}
   </body>
