UHF-3810: Add hds-refactoring related ticket numbers to hds-related TODOs

--- a/src/scss/05_objects/_button.scss
+++ b/src/scss/05_objects/_button.scss
@@ -330,7 +330,7 @@ input[type='submit'].hds-button {
 }
 
 // Content fron HDS button.css ends
-// TODO: Refactor hds-button.
+// TODO: UHF-8793 Refactor hds-button.
 // Fix for button margins when using hel-icon.
 .hds-button {
 
