--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,6 @@
 // This file includes all imports
 
-// TODO: hds content should be cleaned
+// TODO: UHF-8792 The current hds integration of styles needs improving.
 @import 'hds';
 
 // Breakpoint helpers
