UHF-3810: Add ticket number to flex-gap mixin TODO

--- a/src/scss/02_mixins/_mixins.scss
+++ b/src/scss/02_mixins/_mixins.scss
@@ -69,7 +69,7 @@
   white-space: nowrap;
 }
 
-// TODO: replace with native flex gap once enough users have moved to > ios 14.4
+// TODO: UHF-8796 replace with native flex gap once enough users have moved to > ios 14.4
 @mixin flex-gap($gap, $parent-base-margin: 0) {
   margin-left: $parent-base-margin - $gap * 0.5;
   margin-right: $parent-base-margin - $gap * 0.5;
