--- a/src/scss/06_components/navigation/_table-of-contents.scss
+++ b/src/scss/06_components/navigation/_table-of-contents.scss
@@ -59,8 +59,7 @@
   position: relative;
   text-decoration: underline;
 
-  // TODO: Unify focuses/hovers and other link styles once UHF-643 is being
-  // developed. https://helsinkisolutionoffice.atlassian.net/browse/UHF-643
+  // TODO: UHF-643 Unify focuses/hovers and other link styles (https://helsinkisolutionoffice.atlassian.net/browse/UHF-643).
   &:focus {
     outline: none;
 
