UHF-3810: Add links to the TODO issues so that they can be viewed easier

--- a/src/scss/06_components/navigation/_local-tasks.scss
+++ b/src/scss/06_components/navigation/_local-tasks.scss
@@ -1,5 +1,5 @@
 .local-tasks__wrapper {
-  // TODO: UHF-8798 Local tasks are hidden in smaller devices since the design doesn't scale.
+  // TODO: UHF-8798 Local tasks are hidden in smaller devices since the design doesn't scale (https://helsinkisolutionoffice.atlassian.net/browse/UHF-8798).
   display: none;
 
   @include breakpoint($breakpoint-m) {
