--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,6 @@
 // This file includes all imports
 
-// TODO: UHF-8792 The current hds integration of styles needs improving.
+// TODO: UHF-8792 The current hds integration of styles needs improving (https://helsinkisolutionoffice.atlassian.net/browse/UHF-8792).
 @import 'hds';
 
 // Breakpoint helpers
