--- a/templates/navigation/link-button.html.twig
+++ b/templates/navigation/link-button.html.twig
@@ -19,7 +19,7 @@
  *   open_in_a_new_window: true,
  * } %}
  *
- * TODO: UHF-8793 Refactor hds-button.
+ * TODO: UHF-8793 Refactor hds-button (https://helsinkisolutionoffice.atlassian.net/browse/UHF-8793).
  */
  #}
 
