--- a/src/scss/_hds.scss
+++ b/src/scss/_hds.scss
@@ -1,7 +1,7 @@
 // This file includes Helsinki Design System core packages.
 // These contents have been stripped to bare minimum that we use.
 
-// TODO: UHF-8792 We need improve this integration so that it is easier to keep up-to-date.
+// TODO: UHF-8792 We need improve this integration so that it is easier to keep up-to-date (https://helsinkisolutionoffice.atlassian.net/browse/UHF-8792).
 
 // Rows below strip only used bits from @import 'xx_external/hds-core/lib/components/all.min.css';
 
