--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -1,4 +1,5 @@
 // stylelint-disable at-rule-empty-line-before
+// stylelint-disable no-invalid-position-at-import-rule
 // This file includes styling for WYSIWYG editor.
 
 @import 'hds';
@@ -17,6 +18,9 @@
   color: $color-black-90;
   font-family: $base-font-family;
 
+  // This is a div that comes directly after the ck-content class and wraps the whole user edited content
+  // and not a div that is actually written to the content using the editor. Giving the max-width value here
+  // makes sure all the content inside is limited to this max-width.
   > div {
     max-width: $content-width-max;
   }
@@ -32,12 +36,6 @@
 // icons here for the links so that the links look similar as in the end result.
 .ck-content a {
   text-decoration: underline;
-
-  // External link styles
-  &[href^='https://']::after {
-    @include pseudo-icon('link-external', calc(var(--line-height) * 1em), currentColor, inline-block);
-    overflow: hidden;
-  }
 
   // E-mail link styles
   &[href^='mailto:']::after {
