--- a/src/scss/06_components/pages/_news-page.scss
+++ b/src/scss/06_components/pages/_news-page.scss
@@ -1,10 +1,3 @@
-@use 'sass:math';
-
-// Fix sidebar width when there are only short news titles
-// TODO: REGIONS Clean this up with other region things
-$-card-teaser-img-aspect-ratio: math.div(3, 2);
-$-card-teaser-min-width: 280px;
-
 .page-type--news-item .sidebar-first {
   display: block;
 }
@@ -278,7 +271,7 @@ $-card-teaser-min-width: 280px;
   }
 
   .image-placeholder {
-    padding-bottom: aspect-ratio-padding($-card-teaser-img-aspect-ratio);
+    aspect-ratio: 3/2;
   }
 
   .news-listing__text-container {
