--- a/src/scss/06_components/paragraphs/_content-liftup.scss
+++ b/src/scss/06_components/paragraphs/_content-liftup.scss
@@ -74,10 +74,10 @@ $-info-row-icon-size: $spacing-and-half;
 }
 
 .content-liftup__image .image-placeholder {
-  aspect-ratio: ($-content-liftup-aspect-ratio-mobile);
+  aspect-ratio: $-content-liftup-aspect-ratio-mobile;
 
   @include breakpoint($breakpoint-m) {
-    aspect-ratio: ($-content-liftup-aspect-ratio-desktop);
+    aspect-ratio: $-content-liftup-aspect-ratio-desktop;
   }
 
   @include breakpoint($breakpoint-l) {
