UHF-8787: Fix issue with button hover having the same background color as the background when using the metro color palette

--- a/src/scss/color-palette.scss
+++ b/src/scss/color-palette.scss
@@ -97,7 +97,7 @@
   --hdbt-color-palette-button-contrast--primary: #{$hdbt-color-white};
 
   --hdbt-color-palette-button--secondary: #{$hdbt-color-black};
-  --hdbt-color-palette-button-contrast--secondary: #{$hdbt-color-black};
+  --hdbt-color-palette-button-contrast--secondary: #{$hdbt-color-white};
 }
 
 .hdbt-theme--silver {
