--- a/src/scss/06_components/forms/_react-forms.scss
+++ b/src/scss/06_components/forms/_react-forms.scss
@@ -121,6 +121,8 @@ button.hdbt-search__remove-selection-button:not(:disabled) {
 }
 
 // Remove margin from pill buttons
-.hdbt-search__remove-selection-icon {
-  margin: 0;
+.hdbt-search__clear-all [class*='button_hds-button__label'] ~ [class*='button_hds-icon'],
+[class*='button_hds-button'] [class*='button_hds-icon'] {
+  // Use important to override hds styles
+  margin: 0 !important;
 }
