UHF-8715: Modified the accordion structure on errand service details to match with requeste changes

--- a/templates/module/helfi_tpr/tpr-errand-service-detail.html.twig
+++ b/templates/module/helfi_tpr/tpr-errand-service-detail.html.twig
@@ -1,2 +1,4 @@
-<h4 class="errand-service__detail-title">{{ title }}</h4>
+{% if title %}
+  <h4 class="errand-service__detail-title">{{ title }}</h4>
+{% endif %}
 {{ content }}
