UHF-8719: Add changes to how the service channel information is displayed on the service pages

--- a/src/scss/06_components/pages/_service-channel.scss
+++ b/src/scss/06_components/pages/_service-channel.scss
@@ -32,52 +32,28 @@
   }
 }
 
-.service-channel:not(.service-channel--eservice) {
-  margin: $spacing-and-half 0 0;
-  padding-bottom: 0;
-
-  // Padding-left: Icon width + spacing between icon and text
-  padding-left: calc(#{$spacing-and-half} + #{$spacing-half});
-  padding-right: $spacing;
-  padding-top: 0;
+.service-channel {
+  @include font('body');
+  background-color: var(--color-fog-light);
+  margin: $spacing-double 0 0;
+  padding: $spacing-and-half;
 
   @include breakpoint($breakpoint-l) {
-    border: 1px solid $color-black;
-    margin: $spacing-double 0 0;
-    padding-bottom: $spacing-double;
-
-    // Padding-left: spacing to element edge + Icon width + spacing between icon and text
-    padding-left: calc(#{$spacing-and-half} + #{$spacing-and-half} + #{$spacing-half});
-    padding-right: $spacing-and-half;
-    padding-top: $spacing-double;
-  }
-
-  .service-channel__header {
-    align-items: flex-start;
-    display: flex;
+    padding: $spacing-double;
   }
 
   .service-channel__type {
-    height: 24px;
-    margin-left: calc(-#{$spacing-and-half} - #{$spacing-half});
-    overflow: hidden;
-    position: absolute;
-    text-indent: -9999px;
-    width: 24px;
-
-    &::after {
-      @include pseudo-icon(null, $spacing-and-half, $color-black);
-      left: 0;
-      position: absolute;
-      text-indent: 0;
-      top: 0;
-    }
+    @include font('h3');
+    margin-top: 0;
   }
 
   .service-channel__title {
-    @include font('h6'); // Design has smaller font size than normal h3.
-    margin-top: 0;
-    width: 100%;
+    @include font('h4');
+    margin-top: $spacing-and-half;
+
+    @include breakpoint($breakpoint-l) {
+      margin-top: $spacing-double;
+    }
   }
 
   .service-channel__links {
@@ -86,64 +62,42 @@
 }
 
 .service-channel--eservice {
-  background-color: var(--hdbt-color-palette--secondary);
-  margin-top: $spacing-and-half;
-  padding: $spacing-and-half $spacing-and-half $spacing-double;
-
-  @include breakpoint($breakpoint-l) {
-    margin: $spacing-double 0 0;
-    padding: $spacing-triple $spacing-double;
-  }
-
-  .service-channel__type {
-    @include font('h6');
-  }
-
-  .service-channel__title {
-    @include font('special.card_title');
-    margin-top: $spacing-and-half;
-
-    @include breakpoint($breakpoint-l) {
-      margin-top: $spacing;
-    }
-  }
-
   .service-channel__links {
-    margin-top: $spacing-and-half;
+    margin-top: $spacing;
   }
 }
 
-.service-channel--email .service-channel__type::after {
-  @include pseudo-icon-replace('glyph-at');
-}
-
-.service-channel--sms .service-channel__type::after {
-  @include pseudo-icon-replace('mobile');
-}
-
-.service-channel--telephone .service-channel__type::after {
-  @include pseudo-icon-replace('phone');
-}
-
-.service-channel--printable_form .service-channel__type::after {
-  @include pseudo-icon-replace('document');
-}
-
-.service-channel--webpage .service-channel__type::after {
-  @include pseudo-icon-replace('globe');
-}
-
-.service-channel--chat .service-channel__type::after {
-  @include pseudo-icon-replace('speechbubble-text');
-}
-
-.service-channel--local .service-channel__type::after {
-  @include pseudo-icon-replace('location');
-}
-
-.service-channel--mail .service-channel__type::after {
-  @include pseudo-icon-replace('envelope');
-}
+//.service-channel--email .service-channel__type::after {
+//  @include pseudo-icon-replace('glyph-at');
+//}
+//
+//.service-channel--sms .service-channel__type::after {
+//  @include pseudo-icon-replace('mobile');
+//}
+//
+//.service-channel--telephone .service-channel__type::after {
+//  @include pseudo-icon-replace('phone');
+//}
+//
+//.service-channel--printable_form .service-channel__type::after {
+//  @include pseudo-icon-replace('document');
+//}
+//
+//.service-channel--webpage .service-channel__type::after {
+//  @include pseudo-icon-replace('globe');
+//}
+//
+//.service-channel--chat .service-channel__type::after {
+//  @include pseudo-icon-replace('speechbubble-text');
+//}
+//
+//.service-channel--local .service-channel__type::after {
+//  @include pseudo-icon-replace('location');
+//}
+//
+//.service-channel--mail .service-channel__type::after {
+//  @include pseudo-icon-replace('envelope');
+//}
 
 .service-channel__address {
   .address > span {
@@ -155,13 +109,24 @@
   }
 }
 
+.service-channel__requires_authentication {
+  margin-top: $spacing;
+}
+
+.service-channel__phone-link {
+  @include font('body');
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+
+  .link__type {
+    margin-right: $spacing-quarter;
+  }
+}
+
 .service-channel__phone,
 .service-channel__email {
-  margin-top: $spacing;
-
-  > a {
-    @include font('h4');
-  }
+  margin-top: $spacing-and-half;
 }
 
 .service-channel--no-title {
@@ -171,53 +136,18 @@
   }
 }
 
+.service-channel__availabilities,
 .service-channel__call_charge {
-  display: flex;
+  display: block;
   margin-top: $spacing;
 
+  .service-channel__availabilities-label,
   .service-channel__call_charge-label {
+    display: block;
     font-weight: $font-weight-medium;
-    margin-right: $spacing-quarter;
   }
 
   p:first-of-type {
     margin-top: 0;
-  }
-}
-
-.service-channel__info {
-  @include font('small');
-  margin-top: $spacing-and-half;
-
-  > * {
-    display: block;
-
-    & + * {
-      margin-top: $spacing-half;
-    }
-  }
-}
-
-@include breakpoint($breakpoint-l) {
-  .service-channel__info {
-    align-items: center;
-    display: flex;
-
-    > * {
-      align-items: center;
-      display: flex;
-      margin-top: 0;
-
-      &::after {
-        content: '|';
-        margin: 0 $spacing;
-      }
-
-      &:last-child {
-        &::after {
-          content: '';
-        }
-      }
-    }
   }
 }
