--- a/templates/module/helfi_tpr/tpr-service-channel.html.twig
+++ b/templates/module/helfi_tpr/tpr-service-channel.html.twig
@@ -25,37 +25,41 @@
 
 {% set service_channel_heading_level = service_channel_heading_level|default('h3') %}
 
+{% if service_channel_heading_level is same as('h2') %}
+  {% set service_channel_title_level = 'h3' %}
+{% elseif service_channel_heading_level is same as('h4') %}
+  {% set service_channel_title_level = 'h5' %}
+{% elseif service_channel_heading_level is same as('h5') %}
+  {% set service_channel_title_level = 'h6' %}
+{% else %}
+  {% set service_channel_title_level = 'h4' %}
+{% endif %}
+
 <article{{ attributes.addClass(classes) }}>
 
   <div{{ content_attributes.addClass('service-channel__header') }}>
-    <div {{ content_attributes.addClass('service-channel__type') }}>
+    <{{ service_channel_heading_level }}{{ content_attributes.addClass('service-channel__type') }}>
       {{ content.type_string}}
-    </div>
+    </{{ service_channel_heading_level }}>
     {% if title_set %}
-      <{{ service_channel_heading_level }}{{ title_attributes.addClass('service-channel__title') }}>
+      <{{ service_channel_title_level }}{{ title_attributes.addClass('service-channel__title') }}>
         {{ content.name }}
-      </{{ service_channel_heading_level }}>
+      </{{ service_channel_title_level }}>
     {% endif %}
   </div>
 
-  {% if content.phone|render %}
-    <div class="service-channel__phone">
-      {{ content.phone }}
+
+  {% if entity.requires_authentication.value == 1 %}
+    <div class="service-channel__requires_authentication">
+      {{ 'Requires authentication'|t }}
     </div>
   {% endif %}
-
-  {% if entity.requires_authentication.value == 1 or content.availability_summary|render %}
-    <div class="service-channel__info">
-      {% if entity.requires_authentication.value == 1 %}
-        <div class="service-channel__requires_authentication">
-          {{ 'Requires authentication'|t }}
-        </div>
-      {% endif %}
-      {% if content.availability_summary|render %}
-        <div class="service-channel__availabilities">
-          {{ content.availability_summary}}
-        </div>
-      {% endif %}
+  {% if content.availability_summary|render %}
+    <div class="service-channel__availabilities">
+      <span class="service-channel__availabilities-label">
+        {{ 'Open'|t({}, {'context': 'TPR service channel availability label'}) }}:
+      </span>
+      {{ content.availability_summary}}
     </div>
   {% endif %}
 
@@ -74,6 +78,17 @@
     <div class="service-channel__call_charge">
       <span class="service-channel__call_charge-label">{{ 'Call charge'|t({}, {'context': 'TPR service channel call charge info'}) }}:</span>
       {{ content.call_charge_info }}
+    </div>
+  {% endif %}
+
+  {% if content.phone|render %}
+    <div class="service-channel__phone">
+      {% set link_attributes = {
+        'class': [
+          'service-channel__phone-link',
+        ],
+      } %}
+      {{ link(service_channel_phone_number, service_channel_phone_number_url, link_attributes) }}
     </div>
   {% endif %}
 
