--- a/templates/module/helfi_tpr/tpr-service-channel.html.twig
+++ b/templates/module/helfi_tpr/tpr-service-channel.html.twig
@@ -35,6 +35,8 @@
   {% set service_channel_title_level = 'h4' %}
 {% endif %}
 
+{% set service_channel_links_new_tab = service_channel_links_new_tab|default(0) %}
+
 <article{{ attributes.addClass(classes) }}>
 
   <div{{ content_attributes.addClass('service-channel__header') }}>
@@ -48,12 +50,6 @@
     {% endif %}
   </div>
 
-
-  {% if entity.requires_authentication.value == 1 %}
-    <div class="service-channel__requires_authentication">
-      {{ 'Requires authentication'|t }}
-    </div>
-  {% endif %}
   {% if content.availability_summary|render %}
     <div class="service-channel__availabilities">
       <span class="service-channel__availabilities-label">
@@ -95,6 +91,17 @@
   {% if show_mail and content.address|render %}
     <div class="service-channel__address">
       {{ content.address }}
+    </div>
+  {% endif %}
+
+  {% if entity.requires_authentication.value == 1 or service_channel_links_new_tab %}
+    <div class="service-channel__extra-information">
+      {% if entity.requires_authentication.value == 1 %}
+        {{ 'Requires authentication'|t }}.
+      {% endif %}
+      {% if content.links|render and service_channel_links_new_tab %}
+        {{ 'The link opens in a new tab'|t({}, {'context': 'Explanation for users that the link opens in a new tab instead of the expected current tab'}) }}.
+      {% endif %}
     </div>
   {% endif %}
 
