UHF-8719: Style service channels further, add new icon for printable forms, add type_verb for the channels names, change wording on the phone charge on channels

--- a/templates/field/field--tpr-service-channel--eservice--links.html.twig
+++ b/templates/field/field--tpr-service-channel--eservice--links.html.twig
@@ -14,13 +14,9 @@
   {% if item.link_title and item.link_url %}
     {% set link_attributes = {
       'class': [
-        'hds-button',
-        'hds-button--primary',
+        'service-channel__link',
       ]
     } %}
-    {% set link_title %}
-      <span class="hds-button__label">{{ item.link_title }}</span>
-    {% endset %}
-    {{ link(link_title, item.link_url, link_attributes) }}
+    {{ link(item.link_title, item.link_url, link_attributes) }}
   {% endif %}
 {% endfor %}
