UHF-8719: Add margin for address when on service channel type mail

--- a/src/scss/06_components/pages/_service-channel.scss
+++ b/src/scss/06_components/pages/_service-channel.scss
@@ -118,7 +118,8 @@
 }
 
 .service-channel__phone,
-.service-channel__email {
+.service-channel__email,
+.service-channel__address {
   margin-top: $spacing-and-half;
 }
 
